# ntex-study

./: .env  Cargo.toml  README.md
migrations/2024-02-27-141412_employees/: down.sql  up.sql
src/: main.rs
src/handlers/: routes.rs
src/models/: employee.rs  mod.rs  schema.rs
src/repository/: database.rs
tests/: app_test.rs
